1.0.6:
* added option, --dendrogram, to perform hierarchical clustering on gmtk parameters, the dendrogram for row-wise clustering is shown
* fixed the inconsistency in column labels of gmtk parameters when hierarchical clustering is performed
* automated the adjustment of spacing between dendrogram and gmtk parameters, allowing dendrogram labels to display properly
* eliminated the --normalize-gmtk option by producing two figures (normalized & non-normalized) when --parameters is used, one figure otherwise

1.0.5:
* fixed the inconsistency in row ordering of dataframes
* added option to normalize gmtk parameters table row-wise
* add genic overlap percentage
* create gmtk-parameter heatmap from params.params or input.master
* add mne parameter to change track and segment label labels

1.0.4:
* init